--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-    <!-- Intro Sequence Elements 
+    <!-- Intro Sequence Elements -->
     <div class="preloader">
         <i class="fas fa-atom"></i>
         <p>CALIBRATING SENSORS...</p>
